--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -11,7 +11,7 @@
 
   @media screen and (min-width: $tablet) {
     width: 333px;
-    max-height: 810px;
+    height: 100%;
     -webkit-transition: width 0.5s linear, opacity 0.5s linear;
     -o-transition: width 0.5s linear, opacity 0.5s linear;
     transition: width 0.5s linear, opacity 0.5s linear;
@@ -38,34 +38,32 @@
   background-color: $Primary-50;
 
   opacity: 1;
-  overflow: auto;
   -webkit-transition: height 0.5s linear, opacity 0.5s linear;
   -o-transition: height 0.5s linear, opacity 0.5s linear;
   transition: height 0.5s linear, opacity 0.5s linear;
   max-width: 330px;
-  height: 810px;
+  // height: 100%;
 
   @media screen and (min-width: $tablet) {
-    margin-left: auto;
-    margin-right: auto;
-    width: 333px;
-    max-height: 810px;
+    // margin-left: auto;
+    // margin-right: auto;
+    width: 100%;
+
+    // max-height: 810px;
     -webkit-transition: width 0.5s linear, opacity 0.5s linear;
     -o-transition: width 0.5s linear, opacity 0.5s linear;
     transition: width 0.5s linear, opacity 0.5s linear;
   }
 
   @media screen and (min-width: $desktop) {
-    margin-bottom: 30px;
-    max-width: 757px;
+    // margin-bottom: 30px;
+    // max-width: 757px;
     // height: 230px;
   }
 
   &::-webkit-scrollbar {
     width: 0;
   }
-
-  overflow: hidden;
 }
 
 .container__hidden {
@@ -157,6 +155,11 @@
   font-size: 16px;
   line-height: 25.6px;
   letter-spacing: 0;
+
+  @media screen and (min-width: $desktop) {
+    margin: 16px auto;
+    font-size: 20px;
+  }
 }
 
 .filterAmenitisContainer {
@@ -202,6 +205,7 @@
   align-items: center;
   flex-direction: column;
   gap: 20px;
+  width: 100%;
 }
 
 .filterButtonSearch {
@@ -235,12 +239,12 @@
   }
 
   @media screen and (min-width: $tablet) {
-    padding: 8px 44px;
+    padding: 8px 100px;
   }
 
-  @media screen and (min-width: $desktop) {
-    margin-top: 24px;
-  }
+  // @media screen and (min-width: $desktop) {
+  //   margin-top: 24px;
+  // }
 }
 
 .filterButtons {
@@ -338,6 +342,10 @@
   flex-direction: column;
   row-gap: 12px;
   margin-bottom: 12px;
+
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 16px;
+  }
 }
 
 .bedsItem {
@@ -346,7 +354,7 @@
   align-items: center;
 }
 
-.inputBeds {
+.bedsInput {
   width: 24px;
   height: 24px;
   color: $Primary-900;
@@ -357,5 +365,16 @@
   &::after {
     content: "";
     color: $Primary-900;
+  }
+}
+
+.bedsLabel {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 25.6px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 20px;
+    line-height: 34px;
   }
 }
