--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,225 +1,230 @@
-@import '../styles/variables';
+@import "../styles/variables";
 
 @font-face {
-  font-family: "GothamPro";
-  src: url("./fonts/GothamPro.woff2") format("woff2");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
+    font-family: "GothamPro";
+    src: url("./fonts/GothamPro.woff2") format("woff2");
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-  font-family: "GothamProMedium";
-  src: url("./fonts/GothamPro-Medium.woff2") format("woff2");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
+    font-family: "GothamProMedium";
+    src: url("./fonts/GothamPro-Medium.woff2") format("woff2");
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
-  font-family: "GothamProBold";
-  src: url("./fonts/GothamPro-Bold.woff2") format("woff2");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
+    font-family: "GothamProBold";
+    src: url("./fonts/GothamPro-Bold.woff2") format("woff2");
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
 }
 
 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  -webkit-transition-duration: 250ms;
-  -o-transition-duration: 250ms;
-  transition-duration: 250ms;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    -webkit-transition-duration: 250ms;
+    -o-transition-duration: 250ms;
+    transition-duration: 250ms;
 }
 
 html,
 body {
-  min-height: 100vh;
-  width: 100%;
-  scroll-behavior: smooth;
-  background-color: $Gray-0;
-  color: $Gray-900;
-  font-family: GothamPro, sans-serif;  
-  --sb-track-color: #f3f3f3;
-  --sb-thumb-color: #131112;
-  --sb-size: 8px;
+    min-height: 100vh;
+    width: 100%;
+    scroll-behavior: smooth;
+    background-color: $Gray-0;
+    color: $Gray-900;
+    font-family: GothamPro, sans-serif;
+    --sb-track-color: #f3f3f3;
+    --sb-thumb-color: #131112;
+    --sb-size: 8px;
 
-  scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+    scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+}
+
+html,
+body {
+    touch-action: manipulation; /* Prevents zoom and pan gestures */
 }
 
 ::-webkit-scrollbar {
-  width: var(--sb-size);
+    width: var(--sb-size);
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--sb-track-color);
-  border-radius: 8px;
+    background: var(--sb-track-color);
+    border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--sb-thumb-color);
-  border-radius: 8px;
+    background: var(--sb-thumb-color);
+    border-radius: 8px;
 }
 
 header,
 footer {
-  width: inherit;
-  max-width: inherit;
+    width: inherit;
+    max-width: inherit;
 }
 
 body,
 main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 main {
-  -webkit-box-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
 }
 
 main,
 section {
-  width: 100%;
+    width: 100%;
 }
 
 .container {
-  width: 100%;
-  max-width: 1222px;
-  margin: 0 auto;
+    width: 100%;
+    max-width: 1222px;
+    margin: 0 auto;
 }
 
 .pageTopSection {
-  padding: 80px 16px 16px;
+    padding: 80px 16px 16px;
 
-  @media screen and (min-width: $mobile) {
-    padding: 80px 32px 16px;
-  }
+    @media screen and (min-width: $mobile) {
+        padding: 80px 32px 16px;
+    }
 
-  @media screen and (min-width: $tablet) {
-    padding: 90px 40px 20px;
-  }
+    @media screen and (min-width: $tablet) {
+        padding: 90px 40px 20px;
+    }
 
-  @media screen and (min-width: $desktop) {
-    padding: 150px 72px 40px;
-  }
+    @media screen and (min-width: $desktop) {
+        padding: 150px 72px 40px;
+    }
 }
 
 .section {
-  padding: 8px 16px 16px;
+    padding: 8px 16px 16px;
 
-  @media screen and (min-width: $mobile) {
-    padding: 8px 32px 16px;
-  }
+    @media screen and (min-width: $mobile) {
+        padding: 8px 32px 16px;
+    }
 
-  @media screen and (min-width: $tablet) {
-    padding: 12px 40px 20px;
-  }
+    @media screen and (min-width: $tablet) {
+        padding: 12px 40px 20px;
+    }
 
-  @media screen and (min-width: $desktop) {
-    padding: 20px 72px 40px;
-  }
+    @media screen and (min-width: $desktop) {
+        padding: 20px 72px 40px;
+    }
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 ul,
 ol {
-  list-style: none;
+    list-style: none;
 }
 
 .textLink {
-  color: $Gray-50;
-  font-size: 10px;
-  font-weight: 400;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-column-gap: 5px;
-  -moz-column-gap: 5px;
-  column-gap: 5px;
+    color: $Gray-50;
+    font-size: 10px;
+    font-weight: 400;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-column-gap: 5px;
+    -moz-column-gap: 5px;
+    column-gap: 5px;
 }
 
 @media screen and (min-width: $tablet) {
-  .textLink {
-    font-size: 12px;
-  }
+    .textLink {
+        font-size: 12px;
+    }
 }
 
 @media screen and (min-width: $desktop) {
-  .textLink {
-    font-size: 14px;
-  }
+    .textLink {
+        font-size: 14px;
+    }
 }
 
 .textLinkAnimation {
-  text-decoration: none;
-  position: relative;
-  outline: none;
+    text-decoration: none;
+    position: relative;
+    outline: none;
 }
 
 .textLinkAnimation:hover.textLinkAnimation::after,
 .textLinkAnimation:focus.textLinkAnimation::after {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: -3px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  -webkit-animation: textLink 0.8s ease forwards;
-  animation: textLink 0.8s ease forwards;
-  background-color: $Gray-50;
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    -webkit-animation: textLink 0.8s ease forwards;
+    animation: textLink 0.8s ease forwards;
+    background-color: $Gray-50;
 }
 
 @keyframes textLink {
-  0% {
-    width: 0px;
-  }
+    0% {
+        width: 0px;
+    }
 
-  100% {
-    width: 100%;
-  }
+    100% {
+        width: 100%;
+    }
 }
 
 .activeLink {
-  text-decoration: underline;
-  text-decoration-thickness: 1px;
-  text-underline-offset: 3px;
-  -webkit-text-decoration-color: rgba(36, 36, 36, 0.5);
-  text-decoration-color: rgba(36, 36, 36, 0.5);
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 3px;
+    -webkit-text-decoration-color: rgba(36, 36, 36, 0.5);
+    text-decoration-color: rgba(36, 36, 36, 0.5);
 }
 
 .active {
-  position: relative;
+    position: relative;
 }
 
 .active::after {
-  content: '';
-  display: block;
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  -webkit-animation: textLink 0.8s ease forwards;
-  animation: textLink 0.8s ease forwards;
-  background-color: $Gray-600;
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    -webkit-animation: textLink 0.8s ease forwards;
+    animation: textLink 0.8s ease forwards;
+    background-color: $Gray-600;
 }
