another one bugfix

--- a/src/components/OrderForm/OrderForm.module.scss
+++ b/src/components/OrderForm/OrderForm.module.scss
@@ -133,6 +133,7 @@
     cursor: pointer;
     border-bottom: 1px solid $Gray-900;
     padding-left: 32px;
+    font-size: 16px;
     font-family: inherit;
     @media screen and (min-width: $tablet) {
         width: 407px;
