--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -54,6 +54,35 @@ body {
     touch-action: manipulation; /* Prevents zoom and pan gestures */
 }
 
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    select:focus,
+    textarea:focus,
+    input:focus {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-device-width: 600px) {
+    input {
+        appearance: none;
+        -webkit-appearance: none;
+        font-size: 16px;
+    }
+}
+
+@media (hover: none) and (pointer: coarse) {
+    input[type="text"],
+    input[type="date"] {
+        font-size: 16px;
+    }
+}
+
+input[type="text"],
+input[type="date"],
+textarea {
+    font-size: 16px;
+}
+
 ::-webkit-scrollbar {
     width: var(--sb-size);
 }
